// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionItem renders a ClaimRewardsTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <claim-rewards-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a DepositTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <deposit-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a RestakeTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <restake-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a SendTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <send-tx-details-stub
      sessionaddress="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a StakeTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <stake-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a SubmitProposalTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <submit-proposal-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a UnknownTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <unknown-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a UnstakeTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <unstake-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a VoteTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <vote-tx-details-stub
      session-address="cosmos1"
      transaction="[object Object]"
      validators="[object Object]"
    />
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`TransactionItem renders a WithdrawUnstakedTokensTx transaction item 1`] = `
<div
  class="tx-container"
>
  <div
    class="tx"
  >
    <!---->
     
    <div
      class="toggle"
    >
      <i
        class="material-icons notranslate toggle-icon"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
   
  <!---->
</div>
`;
